fix spacing and gift tag

--- a/frontend/src/Results.module.css
+++ b/frontend/src/Results.module.css
@@ -47,5 +47,4 @@
     display: grid;
     place-items: center;
     width: 100vw;
-    height: 100vh;
 }
